--- a/imgui.ini
+++ b/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-Pos=526,179
+Pos=60,60
 Size=400,400
 
-[Window][TESTING BREAD]
-Pos=413,300
-Size=232,254
-
 [Window][Hello, world!]
-Pos=20,23
-Size=700,515
+Pos=0,0
+Size=365,360
+
+[Window][TEST WINDOW 2]
+Pos=243,360
+Size=32,35
 
